# rusted-wheel

./: .gitignore  LICENSE.txt  README.md
client/: README.md  bower.json  build.sh  client.cabal  default.nix  derp.diff  stack.yaml
client/.pulp-cache/: build-stamp
client/html/: index.html
client/src/: Cookie.js  Cookie.purs  Counter.purs  GameState.hs  GameState.purs  Main.hs  Main.purs  Shim.hs  User.purs  Websocket.purs
client/styles/: main.css
client/test/: Main.purs
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs
server/src/game/: mod.rs
server/src/sock/: authorizer.rs  cookie.rs  game.rs  mod.rs  msg.rs  parse.rs
server/src/web/: mod.rs
