name:                client
version:             0.1.0.0
homepage:            https://github.com/githubuser/client#readme
license:             BSD3
license-file:        LICENSE.txt
author:              TheBizzle
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable client
  js-sources:
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  NoImplicitPrelude, OverloadedStrings
  default-language:    Haskell2010
  other-modules:       Shim
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -funbox-strict-fields
    -O2
  build-depends:
    base         >= 4.9.0 && < 4.10.0,
    bizzlelude   >= 1.0.0 && < 1.1.0,
    containers   >= 0.5.7 && < 0.6.0,
    ghcjs-base   >= 0.2.0 && < 0.3.0,
    ghcjs-dom    >= 0.9.1 && < 0.10.0,
    text         >= 1.2.2 && < 1.3.0,
    transformers >= 0.5.2 && < 0.6.0

test-suite client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BizzyWaffles/rusted-wheel
