name:                client
version:             0.1.0.0
homepage:            https://github.com/githubuser/client#readme
license:             BSD3
license-file:        LICENSE.txt
author:              TheBizzle
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable client
  js-sources:
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  NoImplicitPrelude, OverloadedStrings
  default-language:    Haskell2010
  other-modules:       GameState, Shim
  build-depends:
    base, ghcjs-base, ghcjs-dom-jsffi, reflex, reflex-dom, bizzlelude-js, containers, text, transformers
  if impl(ghcjs)
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER
  else
    ghc-options:
      -Wall
      -fno-warn-name-shadowing
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -funbox-strict-fields
      -O2

test-suite client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BizzyWaffles/rusted-wheel
