[package]
name = "server"
version = "0.1.0"
authors = ["fluffywaffles <skorlir@gmail.com>", "TheBizzle <jason.bertsche@gmail.com"]

[dependencies]

[dependencies.iron]
version = "*"

[dependencies.mount]
git = "https://github.com/iron/mount.git"

[dependencies.staticfile]
version = "*"

[dependencies.router]
version = "*"

[dependencies.uuid]
version = "0.5"
features = ["v4"]

[dependencies.time]
version = "*"

[dependencies.ws]
version = "*"
